fix(design-system): vertical scrollbar in docs

--- a/packages/design-system/docs/.vitepress/theme/custom.scss
+++ b/packages/design-system/docs/.vitepress/theme/custom.scss
@@ -20,6 +20,7 @@
 html * {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
+  overflow: auto;
 }
 
 @font-face {
